unpackaged/main/default/objects/maps__LiveSummaryStateMileage__c/fields/maps__Country__c.field-meta.xml
<CustomField>
    <fullName>maps__Country__c</fullName>
    <description>The 3 character country code</description>
    <inlineHelpText>Le code de pays à 3 caractères</inlineHelpText>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>USA</fullName>
            </value>
            <value>
                <fullName>CAN</fullName>
            </value>
            <value>
                <fullName>Not_Specified</fullName>
                <label>Not Specified</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>