unpackaged/main/default/objects/maps__LiveSummaryStateMileage__c/fields/maps__StateProvince__c.field-meta.xml
<CustomField>
    <fullName>maps__StateProvince__c</fullName>
    <description>The associated state or province for this record</description>
    <inlineHelpText>L&#39;état, la région ou la province associé à cet enregistrement</inlineHelpText>
    <label>State or Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>